[package]
name = "hpx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "=4.4.18", features = ["derive"] }
clap_builder = "=4.4.18"
clap_derive = "=4.4.7"
clap_lex = "=1.0.1"
futures-util = "0.3.30"
h2 = "0.4.6"
http = "1.1.0"
tokio = { version = "1.37.0", features = ["macros", "net", "io-util", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.0"
rustls = "0.23.8"
rustls-pemfile = "2.1.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "=1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
